[gd_scene load_steps=2 format=3 uid="uid://jn4ws45okvb0"]

[ext_resource type="Script" path="res://Scripts/Client.gd" id="1_enf40"]

[node name="Client" type="Control"]
layout_mode = 3
anchor_right = 0.999
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -2.0
offset_right = 4.15186
offset_bottom = -1.0
script = ExtResource("1_enf40")

[node name="Play_Button" type="Button" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -15.5
offset_right = 35.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="Connection_Status" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.5
offset_top = -25.0
offset_right = 125.5
grow_horizontal = 2
grow_vertical = 0
scroll_active = false
autowrap_mode = 0

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -906.5
offset_top = -680.0
offset_right = 906.5
offset_bottom = 680.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2
stretch_mode = 3

[connection signal="pressed" from="Play_Button" to="." method="_on_play_button_pressed"]
